volumes-web-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    getambassador.io/config: |-
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: volumes-web-app_mapping
      prefix: /volumes/
      service: volumes-web-app.kubeflow
  labels:
    run: volumes-web-app
  name: volumes-web-app
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: volumes-web-app
  type: ClusterIP
